rustdocs/errors/rust-bitcoin-p2p-src-message_blockdata.rs.txt
error[E0433]: failed to resolve: unresolved import
 --> ../rust-bitcoin/p2p/src/message_blockdata.rs:8:5
  |
8 | use alloc::vec::Vec;
  |     ^^^^^
  |     |
  |     unresolved import
  |     help: a similar path exists: `std::alloc`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `bitcoin`
  --> ../rust-bitcoin/p2p/src/message_blockdata.rs:13:5
   |
13 | use bitcoin::consensus::encode::{self, Decodable, Encodable};
   |     ^^^^^^^ use of unresolved module or unlinked crate `bitcoin`
   |
help: you might be missing a crate named `bitcoin`, add it to your project and import it in your code
   |
 8 + extern crate bitcoin;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `primitives`
  --> ../rust-bitcoin/p2p/src/message_blockdata.rs:14:5
   |
14 | use primitives::transaction::{Txid, Wtxid};
   |     ^^^^^^^^^^ use of unresolved module or unlinked crate `primitives`
   |
help: you might be missing a crate named `primitives`, add it to your project and import it in your code
   |
 8 + extern crate primitives;
   |

error[E0432]: unresolved import `primitives`
  --> ../rust-bitcoin/p2p/src/message_blockdata.rs:12:5
   |
12 | use primitives::BlockHash;
   |     ^^^^^^^^^^ use of unresolved module or unlinked crate `primitives`
   |
help: you might be missing a crate named `primitives`, add it to your project and import it in your code
   |
 8 + extern crate primitives;
   |

error[E0432]: unresolved import `io`
  --> ../rust-bitcoin/p2p/src/message_blockdata.rs:15:5
   |
15 | use io::{BufRead, Write};
   |     ^^
   |     |
   |     unresolved import
   |     help: a similar path exists: `std::io`

error[E0432]: unresolved import `crate::consensus`
  --> ../rust-bitcoin/p2p/src/message_blockdata.rs:17:12
   |
17 | use crate::consensus::impl_consensus_encoding;
   |            ^^^^^^^^^ use of unresolved module or unlinked crate `consensus`
   |
help: you might be missing a crate named `consensus`, add it to your project and import it in your code
   |
 8 + extern crate consensus;
   |

error[E0432]: unresolved import `crate::ProtocolVersion`
  --> ../rust-bitcoin/p2p/src/message_blockdata.rs:18:5
   |
18 | use crate::ProtocolVersion;
   |     ^^^^^^^^^^^^^^^^^^^^^^ no `ProtocolVersion` in the root

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `io`
  --> ../rust-bitcoin/p2p/src/message_blockdata.rs:67:79
   |
67 | ...t<usize, io::Error> {
   |             ^^ use of unresolved module or unlinked crate `io`
   |
   = help: you might be missing a crate named `io`
help: a builtin type with a similar name exists
   |
67 -     fn consensus_encode<W: Write + ?Sized>(&self, w: &mut W) -> Result<usize, io::Error> {
67 +     fn consensus_encode<W: Write + ?Sized>(&self, w: &mut W) -> Result<usize, i8::Error> {
   |
help: consider importing this module
   |
 8 + use std::io;
   |

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
